--- a/docs/retrying-test.adoc
+++ b/docs/retrying-test.adoc
@@ -10,42 +10,47 @@ Such tests make a suite fragile and it makes sense to try and avoid them, but if
 `@RetryingTest(n)` is used _instead_ of `@Test` or other such annotations (e.g. `@RepeatedTest`).
 The attribute `n` specifies how often the test is executed before giving up.
 
-```java
+[source,java]
+----
 @RetryingTest(3)
 void failsNever() {
 	// passing test code
 }
-```
+----
 
 The test `failsNever` is executed once (which succeeds) and marked as passed.
 
-```java
+[source,java]
+----
 @RetryingTest(3)
 void failsOnlyOnFirstInvocation() {
 	// test code that fails on first execution
 	// but passes on the second
 }
-```
+----
 
 The test `failsOnlyOnFirstInvocation` is executed once (which fails) and then once more (which succeeds).
 To allow the entire test suite to pass, the first execution is marked as ignored/aborted, which includes the underlying exception - the second is of course marked as passing.
 
-```java
+[source,java]
+----
 @RetryingTest(3)
 void failsAlways() {
 	// test code that always fails
 }
-```
+----
 
 The test `failsAlways` is executed three times (all of which fail).
 The first two executions are marked as ignored/aborted, while the last as failed - each contains the underlying exception.
 
-```java
+[source,java]
+----
 @RetryingTest(3)
 void aborted() {
-	// test code that is aborted e.g. because of an Assumption.
+	// test code that is aborted,
+	// e.g. because of an `Assumption`.
 }
-```
+----
 
 If a test is aborted (e.g.: because of a failed Assumption) `@RetryingTest` won't try again after that.
 The test `aborted` is aborted before (or during) its first execution.
