--- a/docs/system-properties.adoc
+++ b/docs/system-properties.adoc
@@ -13,7 +13,8 @@ For example, clearing a system property for a test execution can be done as foll
 @Test
 @ClearSystemProperty(key = "some property")
 void test() {
-	assertThat(System.getProperty("some property")).isNull();
+	assertThat(System.getProperty("some property"))
+		.isNull();
 }
 ----
 
@@ -22,9 +23,11 @@ And setting a system property for a test execution:
 [source,java]
 ----
 @Test
-@SetSystemProperty(key = "some property", value = "new value")
+@SetSystemProperty(key = "some property",
+		value = "new value")
 void test() {
-	assertThat(System.getProperty("some property")).isEqualTo("new value");
+	assertThat(System.getProperty("some property"))
+		.isEqualTo("new value");
 }
 ----
 
@@ -35,11 +38,13 @@ As mentioned before, both annotations are repeatable and they can also be combin
 @Test
 @ClearSystemProperty(key = "1st property")
 @ClearSystemProperty(key = "2nd property")
-@SetSystemProperty(key = "3rd property", value = "new value")
+@SetSystemProperty(key = "3rd property",
+		value = "new value")
 void test() {
 	assertThat(System.getProperty("1st property")).isNull();
 	assertThat(System.getProperty("2nd property")).isNull();
-	assertThat(System.getProperty("3rd property")).isEqualTo("new value");
+	assertThat(System.getProperty("3rd property"))
+		.isEqualTo("new value");
 }
 ----
 
@@ -49,11 +54,15 @@ Note that class level configurations are overwritten by method level configurati
 ----
 @ClearSystemProperty(key = "some property")
 class MySystemPropertyTest {
+
 	@Test
-	@SetSystemProperty(key = "some property", value = "new value")
+	@SetSystemProperty(key = "some property",
+			value = "new value")
 	void test() {
-		assertThat(System.getProperty("some property")).isEqualTo("new value");
+		assertThat(System.getProperty("some property"))
+			.isEqualTo("new value");
 	}
+
 }
 ----
 
