--- a/docs/range-sources.adoc
+++ b/docs/range-sources.adoc
@@ -28,9 +28,9 @@ It can be positive or negative:
 @ParameterizedTest
 @DoubleRangeSource(from = -0.1, to = -10, step = -0.1)
 void howColdIsIt(double d) {
-	System.out.println(d + " degrees Celsius is cold");
-	System.out.println(d + " degrees Fahrenheit is REALY cold");
-	System.out.println(d + " degrees Kelvin is too cold to be true");
+	System.out.println(d + " °C is cold");
+	System.out.println(d + " °F is REALY cold");
+	System.out.println(d + " K is too cold to be true");
 }
 ----
 
