Document system property extension with non-constant expressions (#369 / #356)
Up to now, the documentation of the SystemPropertyExtension give the
impression that the extension can not only be used with a constant
expression.

This PR adds a note and an example, how to pass multiple values,
but still use the recovery of the extension.

Closes: #369
PR: #356

--- a/docs/system-properties.adoc
+++ b/docs/system-properties.adoc
@@ -66,6 +66,19 @@ class MySystemPropertyTest {
 }
 ----
 
+Sometimes, you might also need to set a system property to a value that is not a constant expression, which is required for annotation values.
+In this case, you can still leverage the restore mechanism:
+
+[source,java]
+----
+@ParameterizedTest
+@ValueSource(strings = { "foo", "bar" })
+@ClearSystemProperty(key = "some property")
+void test(String value) {
+	System.setProperty("some property", value);
+}
+----
+
 == Thread-Safety
 
 Since system properties are global state, reading and writing them during https://junit.org/junit5/docs/current/user-guide/#writing-tests-parallel-execution[parallel test execution] can lead to unpredictable results and flaky tests.
