Allow adding an existing collection to CartesianProduct$Sets (#358 / #372)
`CartesianProductTest$Sets#add` currently only accepts `Object`
varargs, which is why methods used within Cartesian product factory
methods must return an array. This PR introduces
`CartesianProductTest$Sets#addAll` to allow adding an existing
`Iterable` or `Stream`.

Closes: #358 
PR: #372

--- a/docs/cartesian-product.adoc
+++ b/docs/cartesian-product.adoc
@@ -31,14 +31,16 @@ You can supply test parameters to `@CartesianProductTest` in multiple ways.
 Specifying more than one kind of parameter source (e.g.: both annotating your test method and having a static factory) does not work and will throw an `ExtensionConfigurationException`.
 
 Our earlier example with `{ 1, 2 }` and `{ 3, 4 }`, would look like this:
-```java
+
+[source,java]
+----
 @CartesianProductTest
 @CartesianValueSource(ints = { 1, 2 })
 @CartesianValueSource(ints = { 3, 4 })
 void myCartesianTestMethod(int x, int y) {
-    // passing test code
+	// passing test code
 }
-```
+----
 
 `@CartesianProductTest` works with parameters injected by JUnit automatically (e.g.: `TestReporter`).
 https://junit.org/junit5/docs/current/user-guide/#writing-tests-dependency-injection::[You can read about auto-injected parameters here.]
@@ -55,17 +57,19 @@ If all your test parameters are strings, you can supply all input parameters sim
 This value is the input for all parameters.
 The test will try every combination of its elements.
 
-```java
+[source,java]
+----
 @CartesianProductTest({ "0", "1" })
 void threeBits(String a, String b, String c) {
-    // passing test code
+	// passing test code
 }
-```
+----
 
 The test `threeBits` is executed exactly eight times, because all three input parameters can have the values "0" or "1".
 `@CartesianProductTest` tests for all input combinations, that's `2 × 2 × 2`, so eight tests in total.
 
 To demonstrate with a table:
+
 |===
 | # of test | value of `a`   | value of `b`   | value of `c`
 | 1st test  | "0"            | "0"            | "0"
@@ -84,14 +88,15 @@ If you don't only supply string values to your test method like in the example a
 `@CartesianValueSource` is used to define the possible inputs of a single test parameter - as annotations are listed top-to-bottom, they provide parameter values left-to-right.
 The test will try every combination those values can have.
 
-```java
+[source,java]
+----
 @CartesianProductTest
 @CartesianValueSource(ints = { 1, 2, 4 })
 @CartesianValueSource(strings = { "A", "B" })
 void testIntChars(int number, String character) {
-    // passing test code
+	// passing test code
 }
-```
+----
 
 This annotation might look familiar - it mimics JUnits `@ValueSource`, except `@CartesianValueSource` is repeatable.
 It also does NOT work with `@ParameterizedTest`.
@@ -103,6 +108,7 @@ The second parameter can have any of the two values `"A"` or `"B"`.
 `@CartesianProductTest` tests for all input combinations, that's `3 × 2`, so six tests in total.
 
 To demonstrate with a table:
+
 |===
 | # of test | value of `number` | value of `character`
 | 1st test  | 1                 | "A"
@@ -119,21 +125,25 @@ If your tests require special inputs that `@CartesianValueSource` is not able to
 By default, this method must have the same name as the test method, but you can specify a different name with the `factory` annotation parameter.
 This method must return `CartesianProductTest.Sets`.
 `CartesianProductTest.Sets` is a helper class, specifically for creating sets for `@CartesianProductTest`.
-To create the test data, instantiate a `new CartesianProductTest.Sets()` then use the `add()` method to register the values for the parameters.
+To create the test data, instantiate a `new CartesianProductTest.Sets()` then use the methods `add()` (with varargs arguments) or `addAll()` (with `Iterable` or `Stream` argument) to register the values for the parameters.
 
-```java
+[source,java]
+----
 @CartesianProductTest
 void nFold(String string, Class<?> clazz, TimeUnit unit) {
-    // passing test code
+	// passing test code
 }
 
 static CartesianProductTest.Sets nFold() {
-    return new CartesianProductTest.Sets()
-        .add("Alpha", "Omega")
-        .add(Runnable.class, Cloneable.class, Predicate.class)
-        .add(TimeUnit.DAYS, TimeUnit.HOURS);
+	return new CartesianProductTest.Sets()
+		// e.g. with a `List<String> letters`,
+		// you can use `addAll`:
+		// .addAll(letters)
+		.add("Alpha", "Omega")
+		.add(Runnable.class, Cloneable.class, Predicate.class)
+		.add(TimeUnit.DAYS, TimeUnit.HOURS);
 }
-```
+----
 
 The test `nFold` is executed exactly twelve times.
 The first parameter can have any of the two values `"Alpha"` or `"Omega"`.
@@ -142,6 +152,7 @@ The third parameter can have any of the two values `TimeUnit.DAYS` or `TimeUnit.
 `@CartesianProductTest` tests for all input combinations, that's `2 × 3 × 2`, so twelve tests in total.
 
 To demonstrate with a table:
+
 |===
 | # of test  | value of `string` | value of `clazz` | value of `unit`
 | 1st test   | "Alpha"           | Runnable.class   | TimeUnit.DAYS
@@ -160,24 +171,24 @@ To demonstrate with a table:
 
 Remember, you can reuse the same argument provider method, by explicitly passing its name to `@CartesianProductTest`'s `factory` attribute.
 
-```java
-
+[source,java]
+----
 @CartesianProductTest(factory = "provideArguments")
 void testNeedingArguments(String string, int i) {
-    // passing test code
+	// passing test code
 }
 
 @CartesianProductTest(factory = "provideArguments")
 void testNeedingSameArguments(String string, int i) {
-    // different passing test code
+	// different passing test code
 }
 
 static CartesianProductTest.Sets provideArguments() {
-    return new CartesianProductTest.Sets()
-        .add("Mercury", "Earth", "Venus")
-        .add(1, 12, 144);
+	return new CartesianProductTest.Sets()
+		.add("Mercury", "Earth", "Venus")
+		.add(1, 12, 144);
 }
-```
+----
 
 === Conditions for the static factory method
 
@@ -196,39 +207,41 @@ If you register too few, too many, or conflicting parameters, you will get an ht
 "Conflicting parameters" means your test method has a parameter that should be injected by JUnit (e.g.: `TestReporter`) but you also try to inject it.
 
 Examples of badly configured tests/static factory method:
-```java
+
+[source,java]
+----
 @CartesianProductTest(factory = "resolveParameters")
 void tooFewParameters(String string, int i, boolean b) {
-    // fails because the boolean parameter is not resolved
+	// fails because the boolean parameter is not resolved
 }
 
 @CartesianProductTest(factory = "resolveParameters")
 void tooManyParameters(String string) {
-    // fails because we try to supply a non-existent integer parameter
+	// fails because we try to supply a non-existent integer parameter
 }
 
 @CartesianProductTest(factory = "resolveParameters")
 void wrongOrderParameters(int i, String string) {
-    // fails because the static factory method declared parameter sets in the wrong order
+	// fails because the static factory method declared parameter sets in the wrong order
 }
 
 @CartesianProductTest(factory = "resolveTestReporterParam")
 void conflictingParameters(String string, TestReporter info) {
-    // fails because both the factory method and JUnit tries to inject TestReporter
+	// fails because both the factory method and JUnit tries to inject TestReporter
 }
 
 static CartesianProductTest.Sets resolveParameters() {
-    return new CartesianProductTest.Sets()
-        .add("A", "B", "C")
-        .add(1, 2, 3);
+	return new CartesianProductTest.Sets()
+		.add("A", "B", "C")
+		.add(1, 2, 3);
 }
 
 static CartesianProductTest.Sets resolveTestReporterParam() {
-    return new CartesianProductTest.Sets()
-        .add("A", "B", "C")
-        .add(new MyTestReporter()); // in this case MyTestReporter implements TestReporter
+	return new CartesianProductTest.Sets()
+		.add("A", "B", "C")
+		.add(new MyTestReporter()); // in this case MyTestReporter implements TestReporter
 }
-```
+----
 
 == Customizing Display Names
 
@@ -236,22 +249,25 @@ By default, the display name of a CartesianProductTest invocation contains the i
 You can customize invocation display names via the `name` attribute of the `@CartesianProductTest` annotation.
 For example:
 
-```java
+[source,java]
+----
 @CartesianProductTest(value = {"0", "1"}, name = "{index} => first bit: {0} second bit: {1}")
 @DisplayName("Basic bit test")
 void testWithCustomDisplayName(String a, String b) {
-    // passing test code
+	// passing test code
 }
-```
+----
 
 When executing the above test, you should see output similar to the following:
-```
+
+[source]
+----
 Basic bit test
 ├─ 1 => first bit: 0 second bit: 0
 ├─ 2 => first bit: 0 second bit: 1
 ├─ 3 => first bit: 1 second bit: 0
 └─ 4 => first bit: 1 second bit: 1
-```
+----
 
 Please note that name is a MessageFormat pattern.
 A single quote (') needs to be represented as a doubled single quote ('') in order to be displayed.
