--- a/docs/cartesian-product.adoc
+++ b/docs/cartesian-product.adoc
@@ -25,7 +25,7 @@ The extension takes the test data parameter values and runs the test for every p
 You can supply test parameters to `@CartesianProductTest` in multiple ways.
 
  - the annotation can have a `String[]` value (see <<Supplying CartesianProductTest with a `String[]`>>)
- - the test method can be annotated with `@CartesianValueSource` or range source annotations (see <<Annotating your test method>>)
+ - the test method can be annotated with `@CartesianValueSource`, `@CartesianEnumSource`, or range source annotations (see <<Annotating your test method>>)
  - the test class can have a static factory method providing the arguments (see <<Writing a static factory method for the parameters>>)
 
 Specifying more than one kind of parameter source (e.g.: both annotating your test method and having a static factory) does not work and will throw an `ExtensionConfigurationException`.
@@ -84,7 +84,9 @@ To demonstrate with a table:
 
 == Annotating your test method
 
-If you don't only supply string values to your test method like in the example above, you can annotate your method with `@CartesianValueSource`.
+=== `@CartesianValueSource`
+
+If you don't only supply string values to your test method like in the example of the previous section, you can annotate your method with `@CartesianValueSource`.
 `@CartesianValueSource` is used to define the possible inputs of a single test parameter - as annotations are listed top-to-bottom, they provide parameter values left-to-right.
 The test will try every combination those values can have.
 
@@ -98,9 +100,8 @@ void testIntChars(int number, String character) {
 }
 ----
 
-This annotation might look familiar - it mimics JUnits `@ValueSource`, except `@CartesianValueSource` is repeatable.
+This annotation might look familiar - it mimics https://junit.org/junit5/docs/current/user-guide/#writing-tests-parameterized-tests-sources-ValueSource::[JUnit's `@ValueSource`], except `@CartesianValueSource` is repeatable.
 It also does NOT work with `@ParameterizedTest`.
-https://junit.org/junit5/docs/current/user-guide/#writing-tests-parameterized-tests-sources-ValueSource::[You can read about `@ValueSource` here.]
 
 The test `testIntChars` is executed exactly six times.
 The first parameter can have any of the three values `1`, `2` or `4`.
@@ -118,6 +119,110 @@ To demonstrate with a table:
 | 5th test  | 4                 | "A"
 | 6th test  | 4                 | "B"
 |===
+
+=== `@CartesianEnumSource`
+
+`@CartesianEnumSource` provides a convenient way to use `Enum` constants.
+
+[source,java]
+----
+@CartesianProductTest
+@CartesianEnumSource(TimeUnit.class)
+void testWithCartesianEnumSource(TimeUnit timeUnit) {
+    assertThat(timeUnit).isNotNull();
+}
+----
+
+Like `@CartesianValueSource`, `@CartesianEnumSource` is an annotation that might look familiar - it mimics https://junit.org/junit5/docs/current/user-guide/#writing-tests-parameterized-tests-sources-EnumSource::[JUnit's `@EnumSource`], except `@CartesianEnumSource` is repeatable.
+It also does NOT work with `@ParameterizedTest`.
+
+The annotation provides an optional `names` attribute that lets you specify which constants shall be used, like in the following example.
+If omitted, all constants will be used.
+
+[source,java]
+----
+@CartesianProductTest
+@CartesianEnumSource(value = TimeUnit.class, names = { "DAYS", "HOURS" })
+void testWithCartesianEnumSourceInclude(TimeUnit timeUnit) {
+    assertThat(EnumSet.of(TimeUnit.DAYS, TimeUnit.HOURS)).contains(timeUnit);
+}
+----
+
+The annotation also provides an optional `mode` attribute that enables fine-grained control over which constants are passed to the test method.
+For example, you can exclude names from the enum constant pool or specify regular expressions as in the following examples.
+
+[source,java]
+----
+@CartesianProductTest
+@CartesianEnumSource(value = TimeUnit.class, mode = EXCLUDE, names = { "DAYS", "HOURS" })
+void testWithCartesianEnumSourceExclude(TimeUnit timeUnit) {
+    assertThat(EnumSet.of(TimeUnit.DAYS, TimeUnit.HOURS)).doesNotContain(timeUnit);
+}
+----
+
+[source,java]
+----
+@CartesianProductTest
+@CartesianEnumSource(value = TimeUnit.class, mode = MATCH_ALL, names = "^(M|N).+SECONDS$")
+void testWithCartesianEnumSourceRegex(TimeUnit timeUnit) {
+    assertThat(timeUnit.name()).endsWith("SECONDS");
+}
+----
+
+The example below shows how to use `@CartesianEnumSource` with two `Enum` types.
+
+[source,java]
+----
+enum MyEnum {
+	ONE, TWO, THREE
+}
+
+enum AnotherEnum {
+	ALPHA, BETA, GAMMA, DELTA
+}
+
+@CartesianProductTest
+@CartesianEnumSource(MyEnum.class)
+@CartesianEnumSource(value = AnotherEnum.class, names = { "ALPHA", "DELTA" }, mode = Mode.EXCLUDE)
+void testEnumValues(MyEnum myEnum, AnotherEnum anotherEnum) {
+	// passing test code
+}
+----
+
+The test `testEnumValues` is executed exactly six times.
+The first parameter can have any of the three constants `ONE`, `TWO` or `THREE`.
+The second parameter can have any of the two constants `BETA` or `GAMMA` (note the `EXCLUDE` mode applied to the other two constants).
+`@CartesianProductTest` tests for all input combinations, that's `3 × 2`, so six tests in total.
+
+To demonstrate with a table:
+
+|===
+| # of test | value of `myEnum` | value of `anotherEnum`
+| 1st test  | ONE               | BETA
+| 2nd test  | ONE               | GAMMA
+| 3rd test  | TWO               | BETA
+| 4th test  | TWO               | GAMMA
+| 5th test  | THREE             | BETA
+| 6th test  | THREE             | GAMMA
+|===
+
+`@CartesianEnumSource` can also be combined with other supported annotations, like `@CartesianValueSource`:
+
+[source,java]
+----
+enum MyEnum {
+	ONE, TWO, THREE
+}
+
+@CartesianProductTest
+@CartesianValueSource(ints = { 1, 2, 3 })
+@CartesianEnumSource(MyEnum.class)
+void testEnumValues(int i, MyEnum myEnum) {
+	// passing test code
+}
+----
+
+=== Range Source annotations
 
 Alternatively, you can annotate your test method with link:range-sources.adoc[range source annotations].
 For _this purpose only_, range sources are repeatable.
